# zhongwen-anki

./: .gitignore  Prompt.md  README.md  deck.apkg  requirements.txt  setup.cfg  test.html
card_template/: styling.css  test.html
card_template/chinese_to_english/: back.html  front.html
card_template/english_to_chinese/: back.html  front.html  styling.css
chinese_card_generator/: chatopera.py  main.py  tatoeba.py  utilities.py
data/: input.tsv  input.txt  output.csv  output.tsv
zhongwen_anki/: __main__.py  chatopera.py  constants.py  main.py  meaning.py  new_main.py  new_utilities.py  remove_duplicates.py  sentence.py  synonym.py  synonyms.py  tmp.py  utilities.py
