[metadata]
name = zhongwen_anki
version = 0.1.0
description = Anki card generator.
long_description = file: README.md
long_description_content_type = text/markdown
author = Thomas Hirtz
author_email = thomashirtz@pm.me
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    pinyin
    pandas

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    za = zhongwen_anki.__main__:main
    zhongwen-anki = zhongwen_anki.__main__:main
